# python-uv-template

./: LICENSE  README.md  pyproject.toml
src/python_uv_template/: __init__.py
