[project]
name = "python-uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "K-Oxon", email = "ko1011qfp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
